fix(toolbar): align search icon with header properly

--- a/src/styles/components/toolbar/__toolbar.sass
+++ b/src/styles/components/toolbar/__toolbar.sass
@@ -88,8 +88,9 @@ uni-toolbar
             padding: 0 0 .15rem 0 // padding bottom to avoid letter clipping
 
         i.material-icons
-            float: right
-            margin-left: .5rem
+            vertical-align: middle
+            margin-top: -2px
+            margin-left: .25rem
             color: $uni-color-scale7
             cursor: pointer
 
